pkg/gen/examples/invalid/noncontinuous2/enum.go
package noninteger

//go:enumer
type NonContinuous2 uint

const (
	NonContinuous2A NonContinuous2 = iota
	_
	NonContinuous2B
)
